--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/btn_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
@@ -116,7 +116,7 @@
                         android:textSize="10sp" />
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/txt_pickup_address"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="58 Kilometers on Main Super Highway, Gidap Town, Karachi"
@@ -184,7 +184,7 @@
                         android:textSize="10sp" />
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/txt_destination_address"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="58 Kilometers on Main Super Highway, Gidap Town, Karachi"
