--- a/app/src/main/res/layout/splashscreen.xml
+++ b/app/src/main/res/layout/splashscreen.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ab_gradient">
+    android:background="#EAEAF4">
 
     <ImageView
         android:id="@+id/imageView"
@@ -13,7 +13,6 @@
         android:layout_centerVertical="true"
         android:adjustViewBounds="false"
         android:contentDescription="Logo"
-        android:src="@drawable/trip_reader_logo"
-        android:tint="#fff" />
+        android:src="@mipmap/splash_logo" />
 
 </RelativeLayout>
