--- a/app/src/main/res/drawable/ab_gradient.xml
+++ b/app/src/main/res/drawable/ab_gradient.xml
@@ -4,9 +4,10 @@
     android:useLevel="false" >
 
     <gradient
-        android:angle="0"
-        android:startColor="#3F39A0"
-        android:endColor="#7A1F9F"
+        android:angle="90"
+        android:startColor="#fff"
+        android:endColor="#00000000"
+        android:bottom="40dp"
         android:type="linear" />
 
 </shape>
