--- a/app/src/main/res/layout/activity_bilty_status.xml
+++ b/app/src/main/res/layout/activity_bilty_status.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical">
 
     <LinearLayout
@@ -11,19 +11,35 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="بلٹی کی تصویر محفوظ کریں"
+            android:textColor="#383838"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
         <ImageView
             android:id="@+id/img_pod"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="350dp"
             android:layout_marginBottom="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
-            app:srcCompat="@android:drawable/ic_menu_report_image" />
+            android:background="#fff"
+            android:scaleType="centerInside"
+            android:src="@android:drawable/ic_menu_report_image" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <Button
             android:id="@+id/btn_take_pic"
@@ -50,7 +66,9 @@
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
             android:background="@drawable/button"
-            android:text="Shipment Delivered"
-            android:textColor="@android:color/white" />
+            android:text="محفوظ کریں"
+            android:textColor="@android:color/white"
+            android:textSize="24sp"
+            android:textStyle="bold" />
     </LinearLayout>
 </LinearLayout>
