--- a/app/src/main/res/drawable/pic_save_round_corner.xml
+++ b/app/src/main/res/drawable/pic_save_round_corner.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#ff0000"/>
+    <solid android:color="#FFFFFF"/>
     <!--<stroke android:width="3dp" android:color="#B1BCBE" />-->
-    <corners android:radius="50dp"/>
-    <!--<padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" />-->
+    <corners android:radius="25dp"/>
+    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
