--- a/app/src/main/res/drawable/round_btn.xml
+++ b/app/src/main/res/drawable/round_btn.xml
@@ -3,5 +3,5 @@
     <solid android:color="#89D313"/>
     <!--<stroke android:width="3dp" android:color="#B1BCBE" />-->
     <corners android:radius="50dp"/>
-    <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" />
+    <!--<padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" />-->
 </shape>
