--- a/app/src/main/res/layout/activity_bilty_status.xml
+++ b/app/src/main/res/layout/activity_bilty_status.xml
@@ -22,17 +22,33 @@
             android:textSize="24sp"
             android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/img_pod"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="350dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:background="#fff"
-            android:scaleType="centerInside"
-            android:src="@android:drawable/ic_menu_report_image" />
+            android:layout_height="425dp"
+            android:layout_margin="20dp"
+            android:background="@drawable/pic_save_round_corner"
+            android:elevation="10dp"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="40dp"
+                android:background="@drawable/pic_save_border"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/img_pod"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="false"
+                    android:src="@mipmap/qr_code" />
+            </LinearLayout>
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -63,8 +79,8 @@
             android:id="@+id/btn_submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginStart="40dp"
             android:background="@drawable/button"
             android:text="محفوظ کریں"
             android:textColor="@android:color/white"
